--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
     top: 0;
     right: 0;
     bottom: auto;
-    z-index: 10;
+    z-index: 20;
     background-color: hsla(0,0%,100%,.6);
     -webkit-backdrop-filter: blur(24px);
     backdrop-filter: blur(24px);
