--- a/src/components/SelectedPhoto/SelectedPhoto.css
+++ b/src/components/SelectedPhoto/SelectedPhoto.css
@@ -1,6 +1,6 @@
 .selected-photo-container {
     position: fixed;
-    width: 500px;
+    width: 480px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
